[package]
name = "mpk-mini-ctl"
version = "0.1.1"
authors = ["Eldad Zack <eldad@fogrefinery.com>"]
description = "AKAI MPK Mini mkII Control Tool"
edition = "2021"

[dependencies]
midir = "0.9.1"
clap = { version = "4.3.21", features = ["derive", "cargo"] }
regex = "1.9.3"
serde = "1.0.141"
serde_derive = "1.0.141"
serde_yaml = "0.9.25"
log = "0.4.19"
simplelog = "0.12.1"
anyhow = "1.0.72"
thiserror = "1.0.43"
clap_complete = "4.3.2"
home = "0.5.5"
